kitty website updates

--- a/kitty/genindex.html
+++ b/kitty/genindex.html
@@ -582,6 +582,8 @@ ga('send', 'pageview');
 </li>
         <li><a href="kittens/diff.html#opt-kitten-diff.replace_tab_by">kitten-diff.replace_tab_by</a>
 </li>
+        <li><a href="kittens/diff.html#opt-kitten-diff.search_bg">kitten-diff.search_bg</a>
+</li>
         <li><a href="kittens/diff.html#opt-kitten-diff.syntax_aliases">kitten-diff.syntax_aliases</a>
 </li>
         <li><a href="kittens/diff.html#opt-kitten-diff.title_fg">kitten-diff.title_fg</a>
@@ -690,6 +692,8 @@ ga('send', 'pageview');
 </li>
         <li><a href="conf.html#opt-kitty.shell">kitty.shell</a>
 </li>
+        <li><a href="conf.html#opt-kitty.startup_session">kitty.startup_session</a>
+</li>
         <li><a href="conf.html#opt-kitty.symbol_map">kitty.symbol_map</a>
 </li>
         <li><a href="conf.html#opt-kitty.sync_to_monitor">kitty.sync_to_monitor</a>
@@ -749,13 +753,25 @@ ga('send', 'pageview');
 </li>
         <li><a href="kittens/diff.html#shortcut-kitten-diff.Scroll to next page">kitten-diff.Scroll to next page</a>
 </li>
+        <li><a href="kittens/diff.html#shortcut-kitten-diff.Scroll to next search match">kitten-diff.Scroll to next search match</a>
+</li>
         <li><a href="kittens/diff.html#shortcut-kitten-diff.Scroll to previous change">kitten-diff.Scroll to previous change</a>
 </li>
         <li><a href="kittens/diff.html#shortcut-kitten-diff.Scroll to previous page">kitten-diff.Scroll to previous page</a>
 </li>
+        <li><a href="kittens/diff.html#shortcut-kitten-diff.Scroll to previous search match">kitten-diff.Scroll to previous search match</a>
+</li>
         <li><a href="kittens/diff.html#shortcut-kitten-diff.Scroll to top">kitten-diff.Scroll to top</a>
 </li>
         <li><a href="kittens/diff.html#shortcut-kitten-diff.Scroll up">kitten-diff.Scroll up</a>
+</li>
+        <li><a href="kittens/diff.html#shortcut-kitten-diff.Search backward">kitten-diff.Search backward</a>
+</li>
+        <li><a href="kittens/diff.html#shortcut-kitten-diff.Search backward (no regex)">kitten-diff.Search backward (no regex)</a>
+</li>
+        <li><a href="kittens/diff.html#shortcut-kitten-diff.Search forward">kitten-diff.Search forward</a>
+</li>
+        <li><a href="kittens/diff.html#shortcut-kitten-diff.Search forward (no regex)">kitten-diff.Search forward (no regex)</a>
 </li>
         <li><a href="kittens/diff.html#shortcut-kitten-diff.Show all context">kitten-diff.Show all context</a>
 </li>
@@ -994,6 +1010,13 @@ ga('send', 'pageview');
 </li>
       </ul></li>
       <li>
+    kitten-diff.Scroll to next search match
+
+      <ul>
+        <li><a href="kittens/diff.html#shortcut-kitten-diff.Scroll to next search match">Keyboard Shortcut</a>
+</li>
+      </ul></li>
+      <li>
     kitten-diff.Scroll to previous change
 
       <ul>
@@ -1008,6 +1031,13 @@ ga('send', 'pageview');
 </li>
       </ul></li>
       <li>
+    kitten-diff.Scroll to previous search match
+
+      <ul>
+        <li><a href="kittens/diff.html#shortcut-kitten-diff.Scroll to previous search match">Keyboard Shortcut</a>
+</li>
+      </ul></li>
+      <li>
     kitten-diff.Scroll to top
 
       <ul>
@@ -1019,6 +1049,41 @@ ga('send', 'pageview');
 
       <ul>
         <li><a href="kittens/diff.html#shortcut-kitten-diff.Scroll up">Keyboard Shortcut</a>
+</li>
+      </ul></li>
+      <li>
+    kitten-diff.Search backward
+
+      <ul>
+        <li><a href="kittens/diff.html#shortcut-kitten-diff.Search backward">Keyboard Shortcut</a>
+</li>
+      </ul></li>
+      <li>
+    kitten-diff.Search backward (no regex)
+
+      <ul>
+        <li><a href="kittens/diff.html#shortcut-kitten-diff.Search backward (no regex)">Keyboard Shortcut</a>
+</li>
+      </ul></li>
+      <li>
+    kitten-diff.Search forward
+
+      <ul>
+        <li><a href="kittens/diff.html#shortcut-kitten-diff.Search forward">Keyboard Shortcut</a>
+</li>
+      </ul></li>
+      <li>
+    kitten-diff.Search forward (no regex)
+
+      <ul>
+        <li><a href="kittens/diff.html#shortcut-kitten-diff.Search forward (no regex)">Keyboard Shortcut</a>
+</li>
+      </ul></li>
+      <li>
+    kitten-diff.search_bg
+
+      <ul>
+        <li><a href="kittens/diff.html#opt-kitten-diff.search_bg">Config Setting</a>
 </li>
       </ul></li>
       <li>
@@ -1330,6 +1395,8 @@ ga('send', 'pageview');
         <li><a href="conf.html#opt-kitty.adjust_line_height">Config Setting</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     kitty.allow_remote_control
 
@@ -1358,8 +1425,6 @@ ga('send', 'pageview');
         <li><a href="conf.html#opt-kitty.bell_on_tab">Config Setting</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     kitty.box_drawing_scale
 
@@ -2030,6 +2095,13 @@ ga('send', 'pageview');
 
       <ul>
         <li><a href="conf.html#shortcut-kitty.Start resizing window">Keyboard Shortcut</a>
+</li>
+      </ul></li>
+      <li>
+    kitty.startup_session
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.startup_session">Config Setting</a>
 </li>
       </ul></li>
       <li>
