--- a/kitty/binary.html
+++ b/kitty/binary.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>kitty - Binary install &#8212; kitty 0.11.0 documentation</title>
+    <title>kitty - Binary install &#8212; kitty 0.11.1 documentation</title>
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/custom.css" type="text/css" />
@@ -18,7 +18,7 @@
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
     <link rel="next" title="Building kitty from source" href="build.html" />
-    <link rel="prev" title="kitty - the fast, featureful, GPU based, terminal emulator" href="index.html" />
+    <link rel="prev" title="kitty - the fast, featureful, GPU based terminal emulator" href="index.html" />
 <!-- Google Analytics -->
 <script>
 window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
@@ -86,7 +86,7 @@ ga('send', 'pageview');
 <h3>Related Topics</h3>
 <ul>
   <li><a href="index.html">Documentation overview</a><ul>
-      <li>Previous: <a href="index.html" title="previous chapter">kitty - the fast, featureful, GPU based, terminal emulator</a></li>
+      <li>Previous: <a href="index.html" title="previous chapter">kitty - the fast, featureful, GPU based terminal emulator</a></li>
       <li>Next: <a href="build.html" title="next chapter">Building kitty from source</a></li>
   </ul></li>
 </ul>
