--- a/kitty/genindex.html
+++ b/kitty/genindex.html
@@ -7,7 +7,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Index &#8212; kitty 0.11.1 documentation</title>
+    <title>Index &#8212; kitty 0.11.3 documentation</title>
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/custom.css" type="text/css" />
@@ -663,6 +663,8 @@ ga('send', 'pageview');
 </li>
         <li><a href="conf.html#opt-kitty.dim_opacity">kitty.dim_opacity</a>
 </li>
+        <li><a href="conf.html#opt-kitty.draw_minimal_borders">kitty.draw_minimal_borders</a>
+</li>
         <li><a href="conf.html#opt-kitty.editor">kitty.editor</a>
 </li>
         <li><a href="conf.html#opt-kitty.enable_audio_bell">kitty.enable_audio_bell</a>
@@ -694,6 +696,8 @@ ga('send', 'pageview');
         <li><a href="conf.html#opt-kitty.macos_quit_when_last_window_closed">kitty.macos_quit_when_last_window_closed</a>
 </li>
         <li><a href="conf.html#opt-kitty.macos_titlebar_color">kitty.macos_titlebar_color</a>
+</li>
+        <li><a href="conf.html#opt-kitty.macos_window_resizable">kitty.macos_window_resizable</a>
 </li>
         <li><a href="conf.html#opt-kitty.mouse_hide_wait">kitty.mouse_hide_wait</a>
 </li>
@@ -1428,8 +1432,6 @@ ga('send', 'pageview');
         <li><a href="conf.html#opt-kitty.active_tab_foreground">Config Setting</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     kitty.adjust_line_height
 
@@ -1437,6 +1439,8 @@ ga('send', 'pageview');
         <li><a href="conf.html#opt-kitty.adjust_line_height">Config Setting</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     kitty.allow_remote_control
 
@@ -1634,6 +1638,13 @@ ga('send', 'pageview');
 </li>
       </ul></li>
       <li>
+    kitty.draw_minimal_borders
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.draw_minimal_borders">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
     kitty.Edit config file
 
       <ul>
@@ -1820,6 +1831,13 @@ ga('send', 'pageview');
 
       <ul>
         <li><a href="conf.html#opt-kitty.macos_titlebar_color">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
+    kitty.macos_window_resizable
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.macos_window_resizable">Config Setting</a>
 </li>
       </ul></li>
       <li>
