--- a/kitty/graphics-protocol.html
+++ b/kitty/graphics-protocol.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>The terminal graphics protocol &#8212; kitty 0.11.3 documentation</title>
+    <title>The terminal graphics protocol &#8212; kitty 0.12.0 documentation</title>
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/custom.css" type="text/css" />
@@ -604,9 +604,9 @@ take, and the default value they take when missing. All integers are 32-bit.</p>
 </tr>
 <tr class="row-even"><td><code class="docutils literal notranslate"><span class="pre">d</span></code></td>
 <td>Single character.
-<code class="docutils literal notranslate"><span class="pre">(a,</span> <span class="pre">A,</span> <span class="pre">c,</span> <span class="pre">C,</span> <span class="pre">p,</span>
-<span class="pre">P,</span> <span class="pre">q,</span> <span class="pre">Q,</span> <span class="pre">x,</span> <span class="pre">X,</span> <span class="pre">y,</span>
-<span class="pre">Y,</span> <span class="pre">z,</span> <span class="pre">Z)</span></code>.</td>
+<code class="docutils literal notranslate"><span class="pre">(a,</span> <span class="pre">A,</span> <span class="pre">c,</span> <span class="pre">C,</span> <span class="pre">i,</span>
+<span class="pre">I,</span> <span class="pre">p,</span> <span class="pre">P,</span> <span class="pre">q,</span> <span class="pre">Q,</span> <span class="pre">x,</span> <span class="pre">X,</span>
+<span class="pre">y,</span> <span class="pre">Y,</span> <span class="pre">z,</span> <span class="pre">Z)</span></code>.</td>
 <td><code class="docutils literal notranslate"><span class="pre">a</span></code></td>
 <td>What to delete.</td>
 </tr>
