--- a/kitty/kittens/unicode-input.html
+++ b/kitty/kittens/unicode-input.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Unicode input &#8212; kitty 0.11.3 documentation</title>
+    <title>Unicode input &#8212; kitty 0.12.0 documentation</title>
     <link rel="stylesheet" href="../_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="../_static/custom.css" type="text/css" />
@@ -102,7 +102,7 @@ character and pressing enter, for example, type in <code class="docutils literal
 typing a leading period and then the two character index and pressing Enter.</p>
 <p>In <span class="guilabel">Name</span> mode you instead type words from the character name and use the arrow
 keys/tab to select the character from the displayed matches. You can also type
-a leading period and the index for the match if you dont like to use arrow
+a leading period and the index for the match if you don't like to use arrow
 keys.</p>
 </div>
 
