--- a/kitty/genindex.html
+++ b/kitty/genindex.html
@@ -7,7 +7,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Index &#8212; kitty 0.12.0 documentation</title>
+    <title>Index &#8212; kitty 0.12.1 documentation</title>
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/custom.css" type="text/css" />
@@ -497,6 +497,13 @@ ga('send', 'pageview');
 
       <ul>
         <li><a href="invocation.html#cmdoption-kitty-single-instance">kitty command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --start-in-fullscreen
+
+      <ul>
+        <li><a href="invocation.html#cmdoption-kitty-start-in-fullscreen">kitty command line option</a>
 </li>
       </ul></li>
       <li>
@@ -1210,6 +1217,8 @@ ga('send', 'pageview');
         <li><a href="invocation.html#cmdoption-kitty-session">--session &lt;SESSION&gt;</a>
 </li>
         <li><a href="invocation.html#cmdoption-kitty-single-instance">--single-instance, -1</a>
+</li>
+        <li><a href="invocation.html#cmdoption-kitty-start-in-fullscreen">--start-in-fullscreen</a>
 </li>
         <li><a href="invocation.html#cmdoption-kitty-title">--title &lt;TITLE&gt;, -T &lt;TITLE&gt;</a>
 </li>
