--- a/kitty/kittens/clipboard.html
+++ b/kitty/kittens/clipboard.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>clipboard - copy/paste to the system clipboard &#8212; kitty 0.12.1 documentation</title>
+    <title>clipboard - copy/paste to the system clipboard &#8212; kitty 0.12.2 documentation</title>
     <link rel="stylesheet" href="../_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="../_static/custom.css" type="text/css" />
@@ -14,10 +14,11 @@
     <script type="text/javascript" src="../_static/jquery.js"></script>
     <script type="text/javascript" src="../_static/underscore.js"></script>
     <script type="text/javascript" src="../_static/doctools.js"></script>
+    <script async="async" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="shortcut icon" href="../_static/kitty.png"/>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="kitty-diff - A fast side-by-side diff tool with syntax highlighting and images" href="diff.html" />
+    <link rel="next" title="Custom kittens" href="custom.html" />
     <link rel="prev" title="Support kitty development" href="../support.html" />
 <!-- Google Analytics -->
 <script>
@@ -88,7 +89,7 @@ ga('send', 'pageview');
 <ul>
   <li><a href="../index.html">Documentation overview</a><ul>
       <li>Previous: <a href="../support.html" title="previous chapter">Support kitty development</a></li>
-      <li>Next: <a href="diff.html" title="next chapter">kitty-diff - A fast side-by-side diff tool with syntax highlighting and images</a></li>
+      <li>Next: <a href="custom.html" title="next chapter">Custom kittens</a></li>
   </ul></li>
 </ul>
 </div>
