--- a/kitty/genindex.html
+++ b/kitty/genindex.html
@@ -7,7 +7,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Index &#8212; kitty 0.12.3 documentation</title>
+    <title>Index &#8212; kitty 0.13.0 documentation</title>
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/custom.css" type="text/css" />
@@ -100,6 +100,13 @@ ga('send', 'pageview');
 <h2 id="Symbols">Symbols</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    --add-trailing-space &lt;ADD_TRAILING_SPACE&gt;
+
+      <ul>
+        <li><a href="kittens/hints.html#cmdoption-kitty-kitten-hints-add-trailing-space">kitty-+kitten-hints command line option</a>
+</li>
+      </ul></li>
       <li>
     --align &lt;ALIGN&gt;
 
@@ -715,6 +722,8 @@ ga('send', 'pageview');
 </li>
         <li><a href="conf.html#opt-kitty.foreground">kitty.foreground</a>
 </li>
+        <li><a href="conf.html#opt-kitty.hide_window_decorations">kitty.hide_window_decorations</a>
+</li>
         <li><a href="conf.html#opt-kitty.inactive_border_color">kitty.inactive_border_color</a>
 </li>
         <li><a href="conf.html#opt-kitty.inactive_text_alpha">kitty.inactive_text_alpha</a>
@@ -726,8 +735,6 @@ ga('send', 'pageview');
         <li><a href="conf.html#opt-kitty.macos_custom_beam_cursor">kitty.macos_custom_beam_cursor</a>
 </li>
         <li><a href="conf.html#opt-kitty.macos_hide_from_tasks">kitty.macos_hide_from_tasks</a>
-</li>
-        <li><a href="conf.html#opt-kitty.macos_hide_titlebar">kitty.macos_hide_titlebar</a>
 </li>
         <li><a href="conf.html#opt-kitty.macos_option_as_alt">kitty.macos_option_as_alt</a>
 </li>
@@ -757,6 +764,8 @@ ga('send', 'pageview');
 </li>
         <li><a href="conf.html#opt-kitty.scrollback_pager">kitty.scrollback_pager</a>
 </li>
+        <li><a href="conf.html#opt-kitty.scrollback_pager_history_size">kitty.scrollback_pager_history_size</a>
+</li>
         <li><a href="conf.html#opt-kitty.select_by_word_characters">kitty.select_by_word_characters</a>
 </li>
         <li><a href="conf.html#opt-kitty.selection_foreground">kitty.selection_foreground</a>
@@ -783,6 +792,8 @@ ga('send', 'pageview');
 </li>
         <li><a href="conf.html#opt-kitty.term">kitty.term</a>
 </li>
+        <li><a href="conf.html#opt-kitty.touch_scroll_multiplier">kitty.touch_scroll_multiplier</a>
+</li>
         <li><a href="conf.html#opt-kitty.url_color">kitty.url_color</a>
 </li>
         <li><a href="conf.html#opt-kitty.visual_bell_duration">kitty.visual_bell_duration</a>
@@ -798,8 +809,6 @@ ga('send', 'pageview');
         <li><a href="conf.html#opt-kitty.window_padding_width">kitty.window_padding_width</a>
 </li>
         <li><a href="conf.html#opt-kitty.window_resize_step_cells">kitty.window_resize_step_cells</a>
-</li>
-        <li><a href="conf.html#opt-kitty.x11_hide_window_decorations">kitty.x11_hide_window_decorations</a>
 </li>
       </ul></li>
   </ul></td>
@@ -1262,6 +1271,8 @@ ga('send', 'pageview');
     kitty-+kitten-hints command line option
 
       <ul>
+        <li><a href="kittens/hints.html#cmdoption-kitty-kitten-hints-add-trailing-space">--add-trailing-space &lt;ADD_TRAILING_SPACE&gt;</a>
+</li>
         <li><a href="kittens/hints.html#cmdoption-kitty-kitten-hints-minimum-match-length">--minimum-match-length &lt;MINIMUM_MATCH_LENGTH&gt;</a>
 </li>
         <li><a href="kittens/hints.html#cmdoption-kitty-kitten-hints-multiple">--multiple</a>
@@ -1818,6 +1829,13 @@ ga('send', 'pageview');
 </li>
       </ul></li>
       <li>
+    kitty.hide_window_decorations
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.hide_window_decorations">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
     kitty.inactive_border_color
 
       <ul>
@@ -1899,13 +1917,6 @@ ga('send', 'pageview');
 
       <ul>
         <li><a href="conf.html#opt-kitty.macos_hide_from_tasks">Config Setting</a>
-</li>
-      </ul></li>
-      <li>
-    kitty.macos_hide_titlebar
-
-      <ul>
-        <li><a href="conf.html#opt-kitty.macos_hide_titlebar">Config Setting</a>
 </li>
       </ul></li>
       <li>
@@ -2210,6 +2221,13 @@ ga('send', 'pageview');
 </li>
       </ul></li>
       <li>
+    kitty.scrollback_pager_history_size
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.scrollback_pager_history_size">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
     kitty.Second window
 
       <ul>
@@ -2364,6 +2382,13 @@ ga('send', 'pageview');
 </li>
       </ul></li>
       <li>
+    kitty.touch_scroll_multiplier
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.touch_scroll_multiplier">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
     kitty.Unicode input
 
       <ul>
@@ -2424,13 +2449,6 @@ ga('send', 'pageview');
 
       <ul>
         <li><a href="conf.html#opt-kitty.window_resize_step_cells">Config Setting</a>
-</li>
-      </ul></li>
-      <li>
-    kitty.x11_hide_window_decorations
-
-      <ul>
-        <li><a href="conf.html#opt-kitty.x11_hide_window_decorations">Config Setting</a>
 </li>
       </ul></li>
   </ul></td>
