--- a/kitty/performance.html
+++ b/kitty/performance.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>kitty Performance &#8212; kitty 0.12.3 documentation</title>
+    <title>kitty Performance &#8212; kitty 0.13.0 documentation</title>
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/custom.css" type="text/css" />
@@ -18,7 +18,7 @@
     <link rel="shortcut icon" href="_static/kitty.png"/>
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
-    <link rel="next" title="Extensions to the xterm protocol" href="protocol-extensions.html" />
+    <link rel="next" title="Working with the screen and history buffer contents" href="pipe.html" />
     <link rel="prev" title="Key encoding for extended keyboard protocol" href="key-encoding.html" />
 <!-- Google Analytics -->
 <script>
@@ -79,7 +79,7 @@ ga('send', 'pageview');
 <ul>
   <li><a href="index.html">Documentation overview</a><ul>
       <li>Previous: <a href="key-encoding.html" title="previous chapter">Key encoding for extended keyboard protocol</a></li>
-      <li>Next: <a href="protocol-extensions.html" title="next chapter">Extensions to the xterm protocol</a></li>
+      <li>Next: <a href="pipe.html" title="next chapter">Working with the screen and history buffer contents</a></li>
   </ul></li>
 </ul>
 </div>
