kitty website updates

--- a/kitty/genindex.html
+++ b/kitty/genindex.html
@@ -7,7 +7,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Index &#8212; kitty 0.13.1 documentation</title>
+    <title>Index &#8212; kitty 0.13.2 documentation</title>
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/custom.css" type="text/css" />
@@ -380,6 +380,8 @@ ga('send', 'pageview');
     --match-tab &lt;MATCH_TAB&gt;, -t &lt;MATCH_TAB&gt;
 
       <ul>
+        <li><a href="remote-control.html#cmdoption-kitty-send-text-match-tab">kitty-@-send-text command line option</a>
+</li>
         <li><a href="remote-control.html#cmdoption-kitty-set-background-opacity-match-tab">kitty-@-set-background-opacity command line option</a>
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-set-colors-match-tab">kitty-@-set-colors command line option</a>
@@ -789,6 +791,8 @@ ga('send', 'pageview');
         <li><a href="conf.html#opt-kitty.tab_fade">kitty.tab_fade</a>
 </li>
         <li><a href="conf.html#opt-kitty.tab_separator">kitty.tab_separator</a>
+</li>
+        <li><a href="conf.html#opt-kitty.tab_title_template">kitty.tab_title_template</a>
 </li>
         <li><a href="conf.html#opt-kitty.term">kitty.term</a>
 </li>
@@ -1451,6 +1455,8 @@ ga('send', 'pageview');
         <li><a href="remote-control.html#cmdoption-kitty-send-text-from-file">--from-file &lt;FROM_FILE&gt;</a>
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-send-text-match">--match &lt;MATCH&gt;, -m &lt;MATCH&gt;</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-send-text-match-tab">--match-tab &lt;MATCH_TAB&gt;, -t &lt;MATCH_TAB&gt;</a>
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-send-text-stdin">--stdin</a>
 </li>
@@ -2351,6 +2357,13 @@ ga('send', 'pageview');
 
       <ul>
         <li><a href="conf.html#opt-kitty.tab_separator">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
+    kitty.tab_title_template
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.tab_title_template">Config Setting</a>
 </li>
       </ul></li>
       <li>
