--- a/kitty/genindex.html
+++ b/kitty/genindex.html
@@ -7,7 +7,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Index &#8212; kitty 0.13.2 documentation</title>
+    <title>Index &#8212; kitty 0.13.3 documentation</title>
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/custom.css" type="text/css" />
@@ -296,6 +296,13 @@ ga('send', 'pageview');
 </li>
       </ul></li>
       <li>
+    --hints-offset &lt;HINTS_OFFSET&gt;
+
+      <ul>
+        <li><a href="kittens/hints.html#cmdoption-kitty-kitten-hints-hints-offset">kitty-+kitten-hints command line option</a>
+</li>
+      </ul></li>
+      <li>
     --hold
 
       <ul>
@@ -525,6 +532,13 @@ ga('send', 'pageview');
 
       <ul>
         <li><a href="remote-control.html#cmdoption-kitty-send-text-stdin">kitty-@-send-text command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --stdin &lt;STDIN&gt;
+
+      <ul>
+        <li><a href="kittens/icat.html#cmdoption-kitty-kitten-icat-stdin">kitty-+kitten-icat command line option</a>
 </li>
       </ul></li>
       <li>
@@ -1277,6 +1291,8 @@ ga('send', 'pageview');
       <ul>
         <li><a href="kittens/hints.html#cmdoption-kitty-kitten-hints-add-trailing-space">--add-trailing-space &lt;ADD_TRAILING_SPACE&gt;</a>
 </li>
+        <li><a href="kittens/hints.html#cmdoption-kitty-kitten-hints-hints-offset">--hints-offset &lt;HINTS_OFFSET&gt;</a>
+</li>
         <li><a href="kittens/hints.html#cmdoption-kitty-kitten-hints-minimum-match-length">--minimum-match-length &lt;MINIMUM_MATCH_LENGTH&gt;</a>
 </li>
         <li><a href="kittens/hints.html#cmdoption-kitty-kitten-hints-multiple">--multiple</a>
@@ -1309,6 +1325,8 @@ ga('send', 'pageview');
         <li><a href="kittens/icat.html#cmdoption-kitty-kitten-icat-print-window-size">--print-window-size</a>
 </li>
         <li><a href="kittens/icat.html#cmdoption-kitty-kitten-icat-scale-up">--scale-up</a>
+</li>
+        <li><a href="kittens/icat.html#cmdoption-kitty-kitten-icat-stdin">--stdin &lt;STDIN&gt;</a>
 </li>
         <li><a href="kittens/icat.html#cmdoption-kitty-kitten-icat-transfer-mode">--transfer-mode &lt;TRANSFER_MODE&gt;</a>
 </li>
