--- a/kitty/genindex.html
+++ b/kitty/genindex.html
@@ -7,7 +7,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Index &#8212; kitty 0.13.3 documentation</title>
+    <title>Index &#8212; kitty 0.14.0 documentation</title>
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/custom.css" type="text/css" />
@@ -19,6 +19,7 @@
     <link rel="shortcut icon" href="_static/kitty.png"/>
     <link rel="index" title="Index" href="#" />
     <link rel="search" title="Search" href="search.html" />
+
 <!-- Google Analytics -->
 <script>
 window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
@@ -118,9 +119,13 @@ ga('send', 'pageview');
     --all, -a
 
       <ul>
+        <li><a href="remote-control.html#cmdoption-kitty-disable-ligatures-all">kitty-@-disable-ligatures command line option</a>
+</li>
         <li><a href="remote-control.html#cmdoption-kitty-set-background-opacity-all">kitty-@-set-background-opacity command line option</a>
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-set-colors-all">kitty-@-set-colors command line option</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-set-font-size-all">kitty-@-set-font-size command line option</a>
 </li>
       </ul></li>
       <li>
@@ -352,6 +357,8 @@ ga('send', 'pageview');
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-close-window-match">kitty-@-close-window command line option</a>
 </li>
+        <li><a href="remote-control.html#cmdoption-kitty-disable-ligatures-match">kitty-@-disable-ligatures command line option</a>
+</li>
         <li><a href="remote-control.html#cmdoption-kitty-focus-tab-match">kitty-@-focus-tab command line option</a>
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-focus-window-match">kitty-@-focus-window command line option</a>
@@ -387,6 +394,8 @@ ga('send', 'pageview');
     --match-tab &lt;MATCH_TAB&gt;, -t &lt;MATCH_TAB&gt;
 
       <ul>
+        <li><a href="remote-control.html#cmdoption-kitty-disable-ligatures-match-tab">kitty-@-disable-ligatures command line option</a>
+</li>
         <li><a href="remote-control.html#cmdoption-kitty-send-text-match-tab">kitty-@-send-text command line option</a>
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-set-background-opacity-match-tab">kitty-@-set-background-opacity command line option</a>
@@ -511,6 +520,13 @@ ga('send', 'pageview');
 
       <ul>
         <li><a href="invocation.html#cmdoption-kitty-session">kitty command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --silent
+
+      <ul>
+        <li><a href="kittens/icat.html#cmdoption-kitty-kitten-icat-silent">kitty-+kitten-icat command line option</a>
 </li>
       </ul></li>
       <li>
@@ -716,11 +732,17 @@ ga('send', 'pageview');
 </li>
         <li><a href="conf.html#opt-kitty.cursor_shape">kitty.cursor_shape</a>
 </li>
+        <li><a href="conf.html#opt-kitty.cursor_stop_blinking_after">kitty.cursor_stop_blinking_after</a>
+</li>
         <li><a href="conf.html#opt-kitty.cursor_text_color">kitty.cursor_text_color</a>
 </li>
         <li><a href="conf.html#opt-kitty.dim_opacity">kitty.dim_opacity</a>
 </li>
+        <li><a href="conf.html#opt-kitty.disable_ligatures">kitty.disable_ligatures</a>
+</li>
         <li><a href="conf.html#opt-kitty.draw_minimal_borders">kitty.draw_minimal_borders</a>
+</li>
+        <li><a href="conf.html#opt-kitty.dynamic_background_opacity">kitty.dynamic_background_opacity</a>
 </li>
         <li><a href="conf.html#opt-kitty.editor">kitty.editor</a>
 </li>
@@ -756,6 +778,8 @@ ga('send', 'pageview');
 </li>
         <li><a href="conf.html#opt-kitty.macos_quit_when_last_window_closed">kitty.macos_quit_when_last_window_closed</a>
 </li>
+        <li><a href="conf.html#opt-kitty.macos_show_window_title_in_menubar">kitty.macos_show_window_title_in_menubar</a>
+</li>
         <li><a href="conf.html#opt-kitty.macos_thicken_font">kitty.macos_thicken_font</a>
 </li>
         <li><a href="conf.html#opt-kitty.macos_titlebar_color">kitty.macos_titlebar_color</a>
@@ -776,6 +800,10 @@ ga('send', 'pageview');
 </li>
         <li><a href="conf.html#opt-kitty.repaint_delay">kitty.repaint_delay</a>
 </li>
+        <li><a href="conf.html#opt-kitty.resize_debounce_time">kitty.resize_debounce_time</a>
+</li>
+        <li><a href="conf.html#opt-kitty.resize_draw_strategy">kitty.resize_draw_strategy</a>
+</li>
         <li><a href="conf.html#opt-kitty.scrollback_lines">kitty.scrollback_lines</a>
 </li>
         <li><a href="conf.html#opt-kitty.scrollback_pager">kitty.scrollback_pager</a>
@@ -783,6 +811,8 @@ ga('send', 'pageview');
         <li><a href="conf.html#opt-kitty.scrollback_pager_history_size">kitty.scrollback_pager_history_size</a>
 </li>
         <li><a href="conf.html#opt-kitty.select_by_word_characters">kitty.select_by_word_characters</a>
+</li>
+        <li><a href="conf.html#opt-kitty.selection_background">kitty.selection_background</a>
 </li>
         <li><a href="conf.html#opt-kitty.selection_foreground">kitty.selection_foreground</a>
 </li>
@@ -792,6 +822,8 @@ ga('send', 'pageview');
 </li>
         <li><a href="conf.html#opt-kitty.startup_session">kitty.startup_session</a>
 </li>
+        <li><a href="conf.html#opt-kitty.strip_trailing_spaces">kitty.strip_trailing_spaces</a>
+</li>
         <li><a href="conf.html#opt-kitty.symbol_map">kitty.symbol_map</a>
 </li>
         <li><a href="conf.html#opt-kitty.sync_to_monitor">kitty.sync_to_monitor</a>
@@ -800,17 +832,23 @@ ga('send', 'pageview');
 </li>
         <li><a href="conf.html#opt-kitty.tab_bar_margin_width">kitty.tab_bar_margin_width</a>
 </li>
+        <li><a href="conf.html#opt-kitty.tab_bar_min_tabs">kitty.tab_bar_min_tabs</a>
+</li>
         <li><a href="conf.html#opt-kitty.tab_bar_style">kitty.tab_bar_style</a>
 </li>
         <li><a href="conf.html#opt-kitty.tab_fade">kitty.tab_fade</a>
 </li>
         <li><a href="conf.html#opt-kitty.tab_separator">kitty.tab_separator</a>
 </li>
+        <li><a href="conf.html#opt-kitty.tab_switch_strategy">kitty.tab_switch_strategy</a>
+</li>
         <li><a href="conf.html#opt-kitty.tab_title_template">kitty.tab_title_template</a>
 </li>
         <li><a href="conf.html#opt-kitty.term">kitty.term</a>
 </li>
         <li><a href="conf.html#opt-kitty.touch_scroll_multiplier">kitty.touch_scroll_multiplier</a>
+</li>
+        <li><a href="conf.html#opt-kitty.update_check_interval">kitty.update_check_interval</a>
 </li>
         <li><a href="conf.html#opt-kitty.url_color">kitty.url_color</a>
 </li>
@@ -1326,6 +1364,8 @@ ga('send', 'pageview');
 </li>
         <li><a href="kittens/icat.html#cmdoption-kitty-kitten-icat-scale-up">--scale-up</a>
 </li>
+        <li><a href="kittens/icat.html#cmdoption-kitty-kitten-icat-silent">--silent</a>
+</li>
         <li><a href="kittens/icat.html#cmdoption-kitty-kitten-icat-stdin">--stdin &lt;STDIN&gt;</a>
 </li>
         <li><a href="kittens/icat.html#cmdoption-kitty-kitten-icat-transfer-mode">--transfer-mode &lt;TRANSFER_MODE&gt;</a>
@@ -1369,6 +1409,17 @@ ga('send', 'pageview');
         <li><a href="remote-control.html#cmdoption-kitty-close-window-match">--match &lt;MATCH&gt;, -m &lt;MATCH&gt;</a>
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-close-window-self">--self</a>
+</li>
+      </ul></li>
+      <li>
+    kitty-@-disable-ligatures command line option
+
+      <ul>
+        <li><a href="remote-control.html#cmdoption-kitty-disable-ligatures-all">--all, -a</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-disable-ligatures-match">--match &lt;MATCH&gt;, -m &lt;MATCH&gt;</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-disable-ligatures-match-tab">--match-tab &lt;MATCH_TAB&gt;, -t &lt;MATCH_TAB&gt;</a>
 </li>
       </ul></li>
       <li>
@@ -1506,6 +1557,13 @@ ga('send', 'pageview');
 </li>
       </ul></li>
       <li>
+    kitty-@-set-font-size command line option
+
+      <ul>
+        <li><a href="remote-control.html#cmdoption-kitty-set-font-size-all">--all, -a</a>
+</li>
+      </ul></li>
+      <li>
     kitty-@-set-tab-title command line option
 
       <ul>
@@ -1549,8 +1607,6 @@ ga('send', 'pageview');
         <li><a href="conf.html#opt-kitty.adjust_line_height">Config Setting</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     kitty.allow_remote_control
 
@@ -1579,6 +1635,8 @@ ga('send', 'pageview');
         <li><a href="conf.html#opt-kitty.bell_on_tab">Config Setting</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     kitty.box_drawing_scale
 
@@ -1727,6 +1785,13 @@ ga('send', 'pageview');
 </li>
       </ul></li>
       <li>
+    kitty.cursor_stop_blinking_after
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.cursor_stop_blinking_after">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
     kitty.cursor_text_color
 
       <ul>
@@ -1755,10 +1820,24 @@ ga('send', 'pageview');
 </li>
       </ul></li>
       <li>
+    kitty.disable_ligatures
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.disable_ligatures">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
     kitty.draw_minimal_borders
 
       <ul>
         <li><a href="conf.html#opt-kitty.draw_minimal_borders">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
+    kitty.dynamic_background_opacity
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.dynamic_background_opacity">Config Setting</a>
 </li>
       </ul></li>
       <li>
@@ -1955,6 +2034,13 @@ ga('send', 'pageview');
 
       <ul>
         <li><a href="conf.html#opt-kitty.macos_quit_when_last_window_closed">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
+    kitty.macos_show_window_title_in_menubar
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.macos_show_window_title_in_menubar">Config Setting</a>
 </li>
       </ul></li>
       <li>
@@ -2189,6 +2275,20 @@ ga('send', 'pageview');
 </li>
       </ul></li>
       <li>
+    kitty.resize_debounce_time
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.resize_debounce_time">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
+    kitty.resize_draw_strategy
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.resize_draw_strategy">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
     kitty.Scroll line down
 
       <ul>
@@ -2266,6 +2366,13 @@ ga('send', 'pageview');
 </li>
       </ul></li>
       <li>
+    kitty.selection_background
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.selection_background">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
     kitty.selection_foreground
 
       <ul>
@@ -2329,6 +2436,13 @@ ga('send', 'pageview');
 </li>
       </ul></li>
       <li>
+    kitty.strip_trailing_spaces
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.strip_trailing_spaces">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
     kitty.symbol_map
 
       <ul>
@@ -2357,6 +2471,13 @@ ga('send', 'pageview');
 </li>
       </ul></li>
       <li>
+    kitty.tab_bar_min_tabs
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.tab_bar_min_tabs">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
     kitty.tab_bar_style
 
       <ul>
@@ -2375,6 +2496,13 @@ ga('send', 'pageview');
 
       <ul>
         <li><a href="conf.html#opt-kitty.tab_separator">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
+    kitty.tab_switch_strategy
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.tab_switch_strategy">Config Setting</a>
 </li>
       </ul></li>
       <li>
@@ -2424,6 +2552,13 @@ ga('send', 'pageview');
 
       <ul>
         <li><a href="conf.html#shortcut-kitty.Unicode input">Keyboard Shortcut</a>
+</li>
+      </ul></li>
+      <li>
+    kitty.update_check_interval
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.update_check_interval">Config Setting</a>
 </li>
       </ul></li>
       <li>
