kitty website updates

--- a/kitty/genindex.html
+++ b/kitty/genindex.html
@@ -1,13 +1,11 @@
 
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Index &#8212; kitty 0.14.0 documentation</title>
+    <meta charset="utf-8" />
+    <title>Index &#8212; kitty 0.14.1 documentation</title>
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/custom.css" type="text/css" />
@@ -724,6 +722,8 @@ ga('send', 'pageview');
 </li>
         <li><a href="conf.html#opt-kitty.color7">kitty.color7</a>
 </li>
+        <li><a href="conf.html#opt-kitty.command_on_bell">kitty.command_on_bell</a>
+</li>
         <li><a href="conf.html#opt-kitty.copy_on_select">kitty.copy_on_select</a>
 </li>
         <li><a href="conf.html#opt-kitty.cursor">kitty.cursor</a>
@@ -1026,6 +1026,8 @@ ga('send', 'pageview');
         <li><a href="conf.html#shortcut-kitty.Third window">kitty.Third window</a>
 </li>
         <li><a href="conf.html#shortcut-kitty.Toggle fullscreen">kitty.Toggle fullscreen</a>
+</li>
+        <li><a href="conf.html#shortcut-kitty.Toggle maximized">kitty.Toggle maximized</a>
 </li>
         <li><a href="conf.html#shortcut-kitty.Unicode input">kitty.Unicode input</a>
 </li>
@@ -1747,6 +1749,13 @@ ga('send', 'pageview');
 
       <ul>
         <li><a href="conf.html#opt-kitty.color7">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
+    kitty.command_on_bell
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.command_on_bell">Config Setting</a>
 </li>
       </ul></li>
       <li>
@@ -2541,6 +2550,13 @@ ga('send', 'pageview');
 </li>
       </ul></li>
       <li>
+    kitty.Toggle maximized
+
+      <ul>
+        <li><a href="conf.html#shortcut-kitty.Toggle maximized">Keyboard Shortcut</a>
+</li>
+      </ul></li>
+      <li>
     kitty.touch_scroll_multiplier
 
       <ul>
@@ -2629,7 +2645,7 @@ ga('send', 'pageview');
     <div class="clearer"></div>
   </div>
     <div class="footer">
-      &copy;2018, Kovid Goyal.
+      &copy;2019, Kovid Goyal.
       
     </div>
 
