--- a/kitty/invocation.html
+++ b/kitty/invocation.html
@@ -1,12 +1,10 @@
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>The kitty command line interface &#8212; kitty 0.14.0 documentation</title>
+    <meta charset="utf-8" />
+    <title>The kitty command line interface &#8212; kitty 0.14.1 documentation</title>
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/custom.css" type="text/css" />
@@ -269,7 +267,7 @@ Choices: <code class="code docutils literal notranslate"><span class="pre">fulls
     <div class="clearer"></div>
   </div>
     <div class="footer">
-      &copy;2018, Kovid Goyal.
+      &copy;2019, Kovid Goyal.
       
     </div>
 
