--- a/kitty/performance.html
+++ b/kitty/performance.html
@@ -1,12 +1,10 @@
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>kitty Performance &#8212; kitty 0.14.0 documentation</title>
+    <meta charset="utf-8" />
+    <title>kitty Performance &#8212; kitty 0.14.1 documentation</title>
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/custom.css" type="text/css" />
@@ -117,34 +115,34 @@ measured using htop.  The measurements are taken at the same font and window
 size for all terminals on a <code class="docutils literal notranslate"><span class="pre">Intel(R)</span> <span class="pre">Core(TM)</span> <span class="pre">i7-4820K</span> <span class="pre">CPU</span> <span class="pre">&#64;</span> <span class="pre">3.70GHz</span></code> CPU
 with a <code class="docutils literal notranslate"><span class="pre">Advanced</span> <span class="pre">Micro</span> <span class="pre">Devices,</span> <span class="pre">Inc.</span> <span class="pre">[AMD/ATI]</span> <span class="pre">Cape</span> <span class="pre">Verde</span> <span class="pre">XT</span> <span class="pre">[Radeon</span> <span class="pre">HD</span>
 <span class="pre">7770/8760</span> <span class="pre">/</span> <span class="pre">R7</span> <span class="pre">250X]</span></code> GPU.</p>
-<table border="1" class="docutils">
+<table class="docutils align-center">
 <colgroup>
-<col width="25%" />
-<col width="75%" />
+<col style="width: 25%" />
+<col style="width: 75%" />
 </colgroup>
-<thead valign="bottom">
-<tr class="row-odd"><th class="head">Terminal</th>
-<th class="head">CPU usage (X + terminal)</th>
+<thead>
+<tr class="row-odd"><th class="head"><p>Terminal</p></th>
+<th class="head"><p>CPU usage (X + terminal)</p></th>
 </tr>
 </thead>
-<tbody valign="top">
-<tr class="row-even"><td><em>kitty</em></td>
-<td>6 - 8%</td>
+<tbody>
+<tr class="row-even"><td><p><em>kitty</em></p></td>
+<td><p>6 - 8%</p></td>
 </tr>
-<tr class="row-odd"><td>xterm</td>
-<td>5 - 7% (but scrolling was extremely janky)</td>
+<tr class="row-odd"><td><p>xterm</p></td>
+<td><p>5 - 7% (but scrolling was extremely janky)</p></td>
 </tr>
-<tr class="row-even"><td>termite</td>
-<td>10 - 13%</td>
+<tr class="row-even"><td><p>termite</p></td>
+<td><p>10 - 13%</p></td>
 </tr>
-<tr class="row-odd"><td>urxvt</td>
-<td>12 - 14%</td>
+<tr class="row-odd"><td><p>urxvt</p></td>
+<td><p>12 - 14%</p></td>
 </tr>
-<tr class="row-even"><td>gnome-terminal</td>
-<td>15 - 17%</td>
+<tr class="row-even"><td><p>gnome-terminal</p></td>
+<td><p>15 - 17%</p></td>
 </tr>
-<tr class="row-odd"><td>konsole</td>
-<td>29 - 31%</td>
+<tr class="row-odd"><td><p>konsole</p></td>
+<td><p>29 - 31%</p></td>
 </tr>
 </tbody>
 </table>
@@ -152,8 +150,8 @@ with a <code class="docutils literal notranslate"><span class="pre">Advanced</sp
 its scrolling &quot;smoothness&quot; is much better than that of xterm (at least to my,
 admittedly biased, eyes).</p>
 <div class="admonition note" id="perf-cat">
-<p class="first admonition-title">Note</p>
-<p class="last">Some people have asked why kitty does not perform better than terminal XXX in
+<p class="admonition-title">Note</p>
+<p>Some people have asked why kitty does not perform better than terminal XXX in
 the test of sinking large amounts of data, such as catting a large text
 file. The answer is because this is not a goal for kitty. kitty
 deliberately throttles input parsing and output rendering to minimize
@@ -172,7 +170,7 @@ is a far more important goal.</p>
     <div class="clearer"></div>
   </div>
     <div class="footer">
-      &copy;2018, Kovid Goyal.
+      &copy;2019, Kovid Goyal.
       
     </div>
 
