kitty website updates

--- a/kitty/genindex.html
+++ b/kitty/genindex.html
@@ -5,7 +5,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="utf-8" />
-    <title>Index &#8212; kitty 0.14.1 documentation</title>
+    <title>Index &#8212; kitty 0.14.2 documentation</title>
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/custom.css" type="text/css" />
@@ -416,6 +416,13 @@ ga('send', 'pageview');
 </li>
       </ul></li>
       <li>
+    --multiple-joiner &lt;MULTIPLE_JOINER&gt;
+
+      <ul>
+        <li><a href="kittens/hints.html#cmdoption-kitty-kitten-hints-multiple-joiner">kitty-+kitten-hints command line option</a>
+</li>
+      </ul></li>
+      <li>
     --name &lt;NAME&gt;
 
       <ul>
@@ -626,6 +633,13 @@ ga('send', 'pageview');
 </li>
       </ul></li>
       <li>
+    --wait-for-completion
+
+      <ul>
+        <li><a href="kittens/clipboard.html#cmdoption-kitty-kitten-clipboard-wait-for-completion">kitty-+kitten-clipboard command line option</a>
+</li>
+      </ul></li>
+      <li>
     --wait-for-single-instance-window-close
 
       <ul>
@@ -770,6 +784,8 @@ ga('send', 'pageview');
 </li>
         <li><a href="conf.html#opt-kitty.kitty_mod">kitty.kitty_mod</a>
 </li>
+        <li><a href="conf.html#opt-kitty.linux_display_server">kitty.linux_display_server</a>
+</li>
         <li><a href="conf.html#opt-kitty.macos_custom_beam_cursor">kitty.macos_custom_beam_cursor</a>
 </li>
         <li><a href="conf.html#opt-kitty.macos_hide_from_tasks">kitty.macos_hide_from_tasks</a>
@@ -793,6 +809,8 @@ ga('send', 'pageview');
         <li><a href="conf.html#opt-kitty.open_url_modifiers">kitty.open_url_modifiers</a>
 </li>
         <li><a href="conf.html#opt-kitty.open_url_with">kitty.open_url_with</a>
+</li>
+        <li><a href="conf.html#opt-kitty.placement_strategy">kitty.placement_strategy</a>
 </li>
         <li><a href="conf.html#opt-kitty.rectangle_select_modifiers">kitty.rectangle_select_modifiers</a>
 </li>
@@ -1313,6 +1331,8 @@ ga('send', 'pageview');
 </li>
         <li><a href="kittens/clipboard.html#cmdoption-kitty-kitten-clipboard-use-primary">--use-primary</a>
 </li>
+        <li><a href="kittens/clipboard.html#cmdoption-kitty-kitten-clipboard-wait-for-completion">--wait-for-completion</a>
+</li>
       </ul></li>
       <li>
     kitty-+kitten-diff command line option
@@ -1336,6 +1356,8 @@ ga('send', 'pageview');
         <li><a href="kittens/hints.html#cmdoption-kitty-kitten-hints-minimum-match-length">--minimum-match-length &lt;MINIMUM_MATCH_LENGTH&gt;</a>
 </li>
         <li><a href="kittens/hints.html#cmdoption-kitty-kitten-hints-multiple">--multiple</a>
+</li>
+        <li><a href="kittens/hints.html#cmdoption-kitty-kitten-hints-multiple-joiner">--multiple-joiner &lt;MULTIPLE_JOINER&gt;</a>
 </li>
         <li><a href="kittens/hints.html#cmdoption-kitty-kitten-hints-program">--program &lt;PROGRAM&gt;</a>
 </li>
@@ -1637,8 +1659,6 @@ ga('send', 'pageview');
         <li><a href="conf.html#opt-kitty.bell_on_tab">Config Setting</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     kitty.box_drawing_scale
 
@@ -1646,6 +1666,8 @@ ga('send', 'pageview');
         <li><a href="conf.html#opt-kitty.box_drawing_scale">Config Setting</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     kitty.Browse scrollback buffer in less
 
@@ -2018,6 +2040,13 @@ ga('send', 'pageview');
 </li>
       </ul></li>
       <li>
+    kitty.linux_display_server
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.linux_display_server">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
     kitty.macos_custom_beam_cursor
 
       <ul>
@@ -2225,6 +2254,13 @@ ga('send', 'pageview');
 
       <ul>
         <li><a href="conf.html#shortcut-kitty.Paste from selection">Keyboard Shortcut</a>
+</li>
+      </ul></li>
+      <li>
+    kitty.placement_strategy
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.placement_strategy">Config Setting</a>
 </li>
       </ul></li>
       <li>
