--- a/kitty/pipe.html
+++ b/kitty/pipe.html
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="utf-8" />
-    <title>Working with the screen and history buffer contents &#8212; kitty 0.14.1 documentation</title>
+    <title>Working with the screen and history buffer contents &#8212; kitty 0.14.2 documentation</title>
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/custom.css" type="text/css" />
@@ -132,6 +132,9 @@ and columns of the screen.</p>
 <dt><code class="docutils literal notranslate"><span class="pre">os_window</span></code></dt><dd><p>A new top-level window</p>
 </dd>
 <dt><code class="docutils literal notranslate"><span class="pre">tab</span></code></dt><dd><p>A new window in a new tab</p>
+</dd>
+<dt><code class="docutils literal notranslate"><span class="pre">clipboard,</span> <span class="pre">primary</span></code></dt><dd><p>Copy the text directly to the clipboard. In this case the specified program
+is not run, so use some dummy program name for it.</p>
 </dd>
 <dt><code class="docutils literal notranslate"><span class="pre">none</span></code></dt><dd><p>Run it in the background</p>
 </dd>
