kitty website updates

--- a/kitty/genindex.html
+++ b/kitty/genindex.html
@@ -5,7 +5,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="utf-8" />
-    <title>Index &#8212; kitty 0.14.2 documentation</title>
+    <title>Index &#8212; kitty 0.14.3 documentation</title>
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/custom.css" type="text/css" />
@@ -374,6 +374,8 @@ ga('send', 'pageview');
         <li><a href="remote-control.html#cmdoption-kitty-new-window-match">kitty-@-new-window command line option</a>
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-resize-window-match">kitty-@-resize-window command line option</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-scroll-window-match">kitty-@-scroll-window command line option</a>
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-send-text-match">kitty-@-send-text command line option</a>
 </li>
@@ -812,6 +814,8 @@ ga('send', 'pageview');
 </li>
         <li><a href="conf.html#opt-kitty.placement_strategy">kitty.placement_strategy</a>
 </li>
+        <li><a href="conf.html#opt-kitty.pointer_shape_when_grabbed">kitty.pointer_shape_when_grabbed</a>
+</li>
         <li><a href="conf.html#opt-kitty.rectangle_select_modifiers">kitty.rectangle_select_modifiers</a>
 </li>
         <li><a href="conf.html#opt-kitty.remember_window_size">kitty.remember_window_size</a>
@@ -863,6 +867,8 @@ ga('send', 'pageview');
         <li><a href="conf.html#opt-kitty.tab_title_template">kitty.tab_title_template</a>
 </li>
         <li><a href="conf.html#opt-kitty.term">kitty.term</a>
+</li>
+        <li><a href="conf.html#opt-kitty.terminal_select_modifiers">kitty.terminal_select_modifiers</a>
 </li>
         <li><a href="conf.html#opt-kitty.touch_scroll_multiplier">kitty.touch_scroll_multiplier</a>
 </li>
@@ -1539,6 +1545,13 @@ ga('send', 'pageview');
         <li><a href="remote-control.html#cmdoption-kitty-resize-window-match">--match &lt;MATCH&gt;, -m &lt;MATCH&gt;</a>
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-resize-window-self">--self</a>
+</li>
+      </ul></li>
+      <li>
+    kitty-@-scroll-window command line option
+
+      <ul>
+        <li><a href="remote-control.html#cmdoption-kitty-scroll-window-match">--match &lt;MATCH&gt;, -m &lt;MATCH&gt;</a>
 </li>
       </ul></li>
       <li>
@@ -2264,6 +2277,13 @@ ga('send', 'pageview');
 </li>
       </ul></li>
       <li>
+    kitty.pointer_shape_when_grabbed
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.pointer_shape_when_grabbed">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
     kitty.Previous tab
 
       <ul>
@@ -2569,6 +2589,13 @@ ga('send', 'pageview');
 
       <ul>
         <li><a href="conf.html#opt-kitty.term">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
+    kitty.terminal_select_modifiers
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.terminal_select_modifiers">Config Setting</a>
 </li>
       </ul></li>
       <li>
