--- a/kitty/protocol-extensions.html
+++ b/kitty/protocol-extensions.html
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="utf-8" />
-    <title>Extensions to the xterm protocol &#8212; kitty 0.14.2 documentation</title>
+    <title>Extensions to the xterm protocol &#8212; kitty 0.14.3 documentation</title>
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/custom.css" type="text/css" />
@@ -16,7 +16,7 @@
     <link rel="shortcut icon" href="_static/kitty.png"/>
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
-    <link rel="next" title="Controlling kitty from scripts or the shell" href="remote-control.html" />
+    <link rel="next" title="Documentation for the kitty remote control protocol" href="rc_protocol.html" />
     <link rel="prev" title="Working with the screen and history buffer contents" href="pipe.html" />
 
 <!-- Google Analytics -->
@@ -90,7 +90,7 @@ ga('send', 'pageview');
 <ul>
   <li><a href="index.html">Documentation overview</a><ul>
       <li>Previous: <a href="pipe.html" title="previous chapter">Working with the screen and history buffer contents</a></li>
-      <li>Next: <a href="remote-control.html" title="next chapter">Controlling kitty from scripts or the shell</a></li>
+      <li>Next: <a href="rc_protocol.html" title="next chapter">Documentation for the kitty remote control protocol</a></li>
   </ul></li>
 </ul>
 </div>
