--- a/kitty/kittens/unicode-input.html
+++ b/kitty/kittens/unicode-input.html
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="utf-8" />
-    <title>Unicode input &#8212; kitty 0.14.2 documentation</title>
+    <title>Unicode input &#8212; kitty 0.14.3 documentation</title>
     <link rel="stylesheet" href="../_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="../_static/custom.css" type="text/css" />
@@ -16,6 +16,7 @@
     <link rel="shortcut icon" href="../_static/kitty.png"/>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
+    <link rel="next" title="close-tab" href="../generated/rc.html" />
     <link rel="prev" title="Draw a GPU accelerated dock panel on your desktop" href="panel.html" />
 
 <!-- Google Analytics -->
@@ -77,6 +78,7 @@ ga('send', 'pageview');
 <ul>
   <li><a href="../index.html">Documentation overview</a><ul>
       <li>Previous: <a href="panel.html" title="previous chapter">Draw a GPU accelerated dock panel on your desktop</a></li>
+      <li>Next: <a href="../generated/rc.html" title="next chapter">close-tab</a></li>
   </ul></li>
 </ul>
 </div>
