kitty website updates

--- a/kitty/key-encoding.html
+++ b/kitty/key-encoding.html
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="utf-8" />
-    <title>Key encoding for extended keyboard protocol &#8212; kitty 0.14.6 documentation</title>
+    <title>Key encoding for extended keyboard protocol &#8212; kitty 0.15.0 documentation</title>
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/custom.css" type="text/css" />
@@ -16,7 +16,7 @@
     <link rel="shortcut icon" href="_static/kitty.png"/>
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
-    <link rel="next" title="kitty Performance" href="performance.html" />
+    <link rel="next" title="Launching programs in new windows/tabs" href="launch.html" />
     <link rel="prev" title="The kitty command line interface" href="invocation.html" />
 
 <!-- Google Analytics -->
@@ -78,7 +78,7 @@ ga('send', 'pageview');
 <ul>
   <li><a href="index.html">Documentation overview</a><ul>
       <li>Previous: <a href="invocation.html" title="previous chapter">The kitty command line interface</a></li>
-      <li>Next: <a href="performance.html" title="next chapter"><em>kitty</em> Performance</a></li>
+      <li>Next: <a href="launch.html" title="next chapter">Launching programs in new windows/tabs</a></li>
   </ul></li>
 </ul>
 </div>
