--- a/kitty/performance.html
+++ b/kitty/performance.html
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="utf-8" />
-    <title>kitty Performance &#8212; kitty 0.14.6 documentation</title>
+    <title>kitty Performance &#8212; kitty 0.15.0 documentation</title>
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/custom.css" type="text/css" />
@@ -17,7 +17,7 @@
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
     <link rel="next" title="Working with the screen and history buffer contents" href="pipe.html" />
-    <link rel="prev" title="Key encoding for extended keyboard protocol" href="key-encoding.html" />
+    <link rel="prev" title="Launching programs in new windows/tabs" href="launch.html" />
 
 <!-- Google Analytics -->
 <script>
@@ -77,7 +77,7 @@ ga('send', 'pageview');
 <h3>Related Topics</h3>
 <ul>
   <li><a href="index.html">Documentation overview</a><ul>
-      <li>Previous: <a href="key-encoding.html" title="previous chapter">Key encoding for extended keyboard protocol</a></li>
+      <li>Previous: <a href="launch.html" title="previous chapter">Launching programs in new windows/tabs</a></li>
       <li>Next: <a href="pipe.html" title="next chapter">Working with the screen and history buffer contents</a></li>
   </ul></li>
 </ul>
